--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PondWader/skript-parser.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PondWader/skript-parser/issues"
+  },
+  "homepage": "https://github.com/PondWader/skript-parser#readme",
   "author": "PondWader",
   "license": "ISC"
 }
